# ledger-ethics-framework

./: .gitignore  .gitmodules  LICENSE  PRACTICAL_LEDGER_FRAMEWORK_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  update-ledger-ethics.yml
cli/: __init__.py
tests/: test_cli.py
